--- a/public/style.css
+++ b/public/style.css
@@ -22,6 +22,14 @@ html, body {
     z-index: 100;
 }
 
+#formContainer {
+    width: 80%;
+}
+
+#movieList {
+    width: 78%;
+}
+
 .container {
     position: relative;
     top: 50%;
